tests/snapshots/run_wpt_conformance__trtx_pad_float32_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float32 1D tensor default options",
    "trtx",
    "PASS",
)
