tests/snapshots/run_wpt_conformance__trtx_pad_float32_2D_tensor_with_options_value_as_-Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pad.https.any.js",
    "pad float32 2D tensor with options.value as -Infinity",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    padInput: f32[3, 3];\n  }\n\n  nodes {\n    [padOutput] = pad(padInput, label=\"\", mode=\"\", value=\"-Infinity\");\n  }\n\n  outputs { padOutput; }\n}\n",
        ),
    },
)
