tests/snapshots/run_wpt_conformance__trtx_pad_int32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pad.https.any.js",
    "pad int32 2D tensor default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    padInput: i32[3, 3];\n  }\n\n  nodes {\n    [padOutput] = pad(padInput, label=\"\", mode=\"\", value=null);\n  }\n\n  outputs { padOutput; }\n}\n",
        ),
    },
)
