tests/snapshots/run_wpt_conformance__trtx_pad_int64_2D_tensor_with_options_value_as_bigint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad int64 2D tensor with options.value as bigint",
    "trtx",
    "PASS",
)
